--- a/main/css/style.css
+++ b/main/css/style.css
@@ -13,7 +13,7 @@
 }
 
 /* Søkebokser med input type text*/
-input[type=text] {
+input[type=search] {
   width: 150px;
   box-sizing: border-box;
   border: 2px solid #ccc;
@@ -25,7 +25,7 @@ input[type=text] {
   transition: width 0.4s ease-in-out;
 }
 
-input[type=text]:focus {
+input[type=search]:focus {
   width: 100%;
 }
 
@@ -40,7 +40,7 @@ input[type=text]:focus {
   border-bottom: 2px solid #111;
 }
 
-/* Styling på navigasjonen  til venstre
+/* Styling på navigasjonen  til venstre og høyre
 Setter padding til venstre og på top
 Hinder understreking i lenker <a>
 Fjerner kulepunkter i lister <ul>*/
@@ -49,6 +49,7 @@ Fjerner kulepunkter i lister <ul>*/
   color: #D3D3D3;
   padding-top: 20px;
   padding-left: 20px;
+  padding-right: 20px;
 }
 
 .navmenu a {
@@ -64,6 +65,41 @@ Fjerner kulepunkter i lister <ul>*/
 .navmenu ul {
   list-style-type: none;
 }
+
+/* Overskriftene i søketreffet vises som vanlig tekst met fet skrift */
+#søke_treff h1 {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+#søke_treff h2 {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+#søke_treff h3 {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+#søke_treff h4 {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+#søke_treff h5 {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+#søke_treff h6 {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+/* div {width: 500px; padding-bottom: 10px; }
+#Content1, #Content2 {border-bottom: 3px solid #4588ba; margin-bottom:10px;}
+div p {background: #4588ba; line-height: 150px; font-size: 2em; font-family: sans-serif; color: white; margin: 0; padding-left: 30px;} */
 
 /* Klassen for å vise/skjule innhold
 Brukes på nedtrekksliste og i navigasjonen til høyre */
