--- a/main/css/navbar.css
+++ b/main/css/navbar.css
@@ -37,9 +37,7 @@ input[type=search]:focus {
   background-color: #222930;
   color: white;
   
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-bottom: 10px;
+  padding: 20px 20px 10px 20px;
   border-bottom: 2px solid #111;
 }
 
